--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Riot App</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css" />
+    <link type="text/css" rel="stylesheet" href="/css/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Riot Setup</title>
   </head>
   <body>
-    <main-app></main-app>
+    <app></app>
+    <!--TODO: import jquery from local file -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="/js/main-bundle.js"></script>
   </body>
 </html>
